--- a/client/src/app/componentes/login/login.component.html
+++ b/client/src/app/componentes/login/login.component.html
@@ -1,1 +1,46 @@
-<p>login works!</p>
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<!------ Include the above in your HEAD tag ---------->
+
+    <div id="login">
+        <div align="center">
+            <img  class="text-center" src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcS3LV-yGiM-i-GvYTEx4u_skdk5vwSDVbfakg&usqp=CAU">
+        </div>
+        
+        <h6 class="text-center text-black pt-2">UNIVERSIDAD DE SAN CARLOS DE GUATEMALA</h6>
+        <h3 class="text-center text-black pt-2">FACULTAD DE INGENIERIA</h3>
+        <div class="container">
+            <div id="login-row" class="row justify-content-center align-items-center">
+                <div id="login-column" class="col-md-6">
+                    <div id="login-box" class="col-md-12">
+                        <form id="login-form" class="form" action="" method="post">
+                            <h6 class="text-center text-info">INICIAR SESIÓN INGENIERIA USAC</h6>
+                            <div>
+                                <br><br>
+    
+                            </div>
+                            
+                            <div class="form-group">
+                               
+                                <input type="text"  name="nombre" id="username" class="form-control" placeholder="CUI/REGISTRO ACADEMICO">
+                            </div>
+                            <div class="form-group">
+                            
+                                <input type="password"  name="password" id="password" class="form-control" placeholder="PASSWORD">
+                            </div>
+                            <div class="form-group">
+                               
+                                <button class="btn btn-light btn-block" >INGRESAR</button>
+                            </div>
+                            <div class="form-group" align="center" >
+                               
+                                <button routerLink="/portal/registro"  class="btn btn-link" >¿Olvido su contraseña?</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
